--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,34 @@
         android:theme="@style/Theme.Capstone"
         tools:targetApi="31">
         <activity
+            android:name=".DiagnoseMain"
+            android:exported="false">
+        </activity>
+        <activity android:name=".CommunityMain"
+            android:exported="false">
+        </activity>
+        <activity android:name=".Reporting"
+            android:exported="false">
+        </activity>
+        <activity android:name=".CommunityWrite"
+            android:exported="false">
+        </activity>
+        <activity android:name=".MoreInfoPopup"
+            android:exported="false">
+        </activity>
+        <activity android:name=".DiagnoseNotSerious"
+            android:exported="false">
+        </activity>
+        <activity android:name=".DiagnoseSerious"
+            android:exported="false">
+        </activity>
+        <activity android:name=".DiagnoseWrite"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
