--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,9 @@
         <activity android:name=".MainActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".SignIn"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".LogIn"
             android:exported="true"
