--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,15 @@ android {
 
 dependencies {
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'de.hdodenhof:circleimageview:3.1.0' //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.tracing:tracing-perfetto-handshake:+'//Circle ImageView
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
