--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,45 +20,57 @@
         android:hardwareAccelerated="true">
         <activity
             android:name=".DiagnoseMain"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
         <activity android:name=".CommunityMain"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
         <activity android:name=".Reporting"
             android:exported="false">
         </activity>
         <activity android:name=".CommunityWrite"
+            android:parentActivityName=".CommunityMain"
             android:exported="false">
         </activity>
         <activity android:name=".MoreInfoPopup"
             android:exported="false">
         </activity>
         <activity android:name=".DiagnoseNotSerious"
+            android:parentActivityName=".DiagnoseMain"
             android:exported="false">
         </activity>
         <activity android:name=".DiagnoseSerious"
+            android:parentActivityName=".DiagnoseMain"
             android:exported="false">
         </activity>
         <activity android:name=".DiagnoseWrite"
+            android:parentActivityName=".DiagnoseMain"
             android:exported="false">
         </activity>
         <activity android:name=".NumSearch"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
         <activity android:name=".NumNotSearch"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
         <activity android:name=".BanHistory"
+            android:parentActivityName=".MypageMain"
             android:exported="false">
         </activity>
         <activity android:name=".MypageMain"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
         <activity android:name=".MypageEdit"
+            android:parentActivityName=".MypageMain"
             android:exported="false">
         </activity>
         <activity android:name=".CommunityPost"
+            android:parentActivityName=".CommunityMain"
             android:exported="false">
         </activity>
 
@@ -66,20 +78,31 @@
             android:exported="false">
         </activity>
         <activity android:name=".SignIn"
+            android:parentActivityName=".LogIn"
             android:exported="false">
         </activity>
         <activity android:name=".MyWritingHistory"
+            android:parentActivityName=".MypageMain"
             android:exported="false"/>
         <activity android:name=".BanHistoryNone"
+            android:parentActivityName=".MypageMain"
             android:exported="false"/>
         <activity android:name=".QnA"
+            android:parentActivityName=".MypageMain"
             android:exported="false"/>
         <activity android:name=".QnAWrite"
+            android:parentActivityName=".QnA"
+            android:exported="false"/>
+        <activity android:name=".Settings"
+            android:parentActivityName=".MypageMain"
+            android:exported="false"/>
+        <activity android:name=".ReportHistory"
+            android:parentActivityName=".MypageMain"
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
