--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:name=".DiagnoseMain"
             android:exported="false">
         </activity>
+        <activity android:name=".Settings"
+            android:exported="true"></activity>
         <activity android:name=".CommunityMain"
             android:exported="false">
         </activity>
