--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
 
     <application
+        android:name=".kakaoApplication"
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,13 +19,36 @@
         tools:targetApi="31"
         android:usesCleartextTraffic="true"
         android:hardwareAccelerated="true">
+        <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="oauth"
+                    android:scheme="kakao{d1ccf91d3f67f62c53f4a4025df7b4b8}" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true"
+            tools:ignore="DuplicateActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao{d1ccf91d3f67f62c53f4a4025df7b4b8}" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".DiagnoseMain"
             android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
-        <activity android:name=".Settings"
-            android:exported="true"></activity>
         <activity android:name=".CommunityMain"
             android:parentActivityName=".MainActivity"
             android:exported="false">
