--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 
     <application
@@ -17,7 +17,8 @@
         android:theme="@style/Theme.Capstone"
         tools:targetApi="31"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true">
+        android:hardwareAccelerated="true"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".DiagnoseMain"
             android:parentActivityName=".MainActivity"
@@ -79,7 +80,7 @@
         <activity android:name=".LogIn"
             android:exported="false">
         </activity>
-        <activity android:name=".SignIn"
+        <activity android:name=".SignUp"
             android:parentActivityName=".LogIn"
             android:exported="false">
         </activity>
@@ -114,5 +115,6 @@
         </activity>
         <activity android:name="com.example.capstone.ReportingEnd" />
     </application>
+
 
 </manifest>
