feat:diagnoseVoiceVersion_성공_percent끌어오기도_성공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,7 +126,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:host="oauth"
-                    android:scheme="kakao" />
+                    android:scheme="kakao0f1040431656008dfafba9b194dcb098" />
             </intent-filter>
         </activity>
     </application>
