--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=true
+FLIPPER_VERSION=0.252.0
