feat:chatbot_성공

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.tracing:tracing-perfetto-handshake:+'
     implementation 'androidx.room:room-common:2.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'//Circle ImageView
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
+    implementation 'com.android.volley:volley:1.2.1'//Circle ImageView
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
