feat:모두 다 완료, xml만 좀 수정하면 됨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:parentActivityName=".Community.CommunityMain"
             android:exported="false">
         </activity>
+        <activity android:name=".Community.CommunityPostView"
+            android:parentActivityName=".Community.CommunityMain"
+            android:exported="false">
+        </activity>
         <activity android:name=".Diagnose.MoreInfoPopup"
             android:exported="false">
         </activity>
